# Nexus

./: .gitignore  README.md
docs/: frontend-backend-communication.txt  operations.txt  schema-file.sql
main/: CMakeLists.txt  app.cpp  constants.h  constants.h.in  nexus.txt  variables.h
main/data/: CMakeLists.txt
main/data-transfer/: CMakeLists.txt
main/data-transfer/include/: Consumer.hpp  DataTransfer.hpp  KafkaApi.hpp  Producer.hpp
main/data-transfer/src/: Consumer.cpp  Producer.cpp
main/data/include/: Cache.hpp  Chunk.hpp  Chunker.hpp  Contents.hpp  DataEncryptor.hpp
main/data/src/: Cache.cpp  Chunk.cpp  Chunker.cpp  Contents.cpp  DataEncryptor.cpp
main/dfs/: CMakeLists.txt
main/dfs/data/: CMakeLists.txt
main/dfs/data/include/: Chunk.hpp  Content.hpp  Data.h  Data.hpp  DataChunker.hpp  Handler.hpp
main/dfs/data/src/: Chunk.cpp  Content.cpp  Data.cpp  DataChunker.cpp  Handler.cpp
main/dfs/database/: CMakeLists.txt  nexus_data.sql
main/dfs/database/include/: Database.hpp  DatabaseHandler.hpp  JsonDataHandler.hpp  JsonStringBuilder.hpp  Metadata.hpp  QueryParser.hpp
main/dfs/database/queries/data/: data_schema.sql  delete_chunk.sql  delete_file.sql  get_data_from_storage.sql  get_single_file_data.sql  store_chunk.sql  store_file.sql
main/dfs/database/queries/test/: example_query.sql
main/dfs/database/src/: DatabaseHandler.cpp  JsonDataHandler.cpp  JsonStringBuilder.cpp  Metadata.cpp  QueryParser.cpp
main/dfs/dfs-api/: CMakeLists.txt
main/dfs/dfs-api/include/: Dfs.hpp
main/dfs/dfs-api/src/: Dfs.cpp
main/dfs/include/: Dfs.hpp  DfsHandler.hpp  DfsResult.hpp  Handler.hpp  Nexus.hpp
main/dfs/interface/: index.html
main/dfs/interface/assets/: app.js
main/dfs/server/: CMakeLists.txt
main/dfs/server/include/: Server.hpp  ServerHandler.hpp
main/dfs/server/src/: Server.cpp  ServerHandler.cpp
main/dfs/src/: Dfs.cpp  DfsResult.cpp
main/dfs/storage/: CMakeLists.txt
main/dfs/storage/include/: AwsHandler.hpp  ConnectorApi.hpp  Storage.hpp
main/dfs/storage/src/: AwsHandler.cpp
main/dfs/utility/: CMakeLists.txt
main/dfs/utility/include/: JsonDataHandler.hpp  JsonStringBuilder.hpp  Utility.hpp
main/dfs/utility/src/: JsonDataHandler.cpp  JsonStringBuilder.cpp
main/dfs/wasm-api/: CMakeLists.txt
main/dfs/wasm-api/include/: Dfs.hpp
main/dfs/wasm-api/src/: Dfs.cpp
main/interface/: index.html  login.html  nexus  sign-up.html
main/interface/assets/: app.js  package-lock.json  package.json  server.js
main/interface/public/: index.html
main/interface/static/css/: form.css  style.css
main/interface/static/js/: app.js  testing.js
main/interface/static/js/app/: DfsListeners.js  DfsListenersOperations.js  dfs.js  form.js
main/interface/static/js/requests/: UserOperations.js
main/interface/styles/: form.css  style.css
main/interface/templates/: index.html  login.html  sign-up.html
main/metadata/: CMakeLists.txt
main/metadata/include/: Database.hpp  DbConnHandler.hpp  DbOperHandler.hpp  MetaData.hpp
main/metadata/queries/cache/: CacheSchema.sql  GetChunkCount.sql  GetChunkKeys.sql  GetFileIdFromChunk.sql  GetFileName.sql  GetTrashFileName.sql
main/metadata/queries/data/: DataSchema.sql  GetChunkIds.sql  GetFileIdFromChunk.sql  GetFileIds.sql  GetObjectKeyFromChunk.sql  GetObjectKeyFromTrash.sql  InsertNewFile.sql  InsertWithoutBucketInfo.sql
main/metadata/queries/dfs/: GetFileIdFromName.sql  GetTrashFileIdFromName.sql  GetUserId.sql  ListFileData.sql  ListTrashFileData.sql
main/metadata/queries/storage/: AddTrashChunkQuery.sql  AddTrashFileQuery.sql  DeleteChunkQuery.sql  DeleteFileQuery.sql  DeleteTrashChunkQuery.sql  DeleteTrashFile.sql  GetBucketId.sql  GetBuckets.sql  GetDataQuery.sql  GetFileDataQuery.sql  GetFileId.sql  GetTrashChunkKey.sql  GetTrashDataQuery.sql  GetTrashFileName.sql  InsertBucket.sql  UpdateChunkBucketInfo.sql  UpdatePrimaryBucketNumber.sql
main/metadata/queries/test/: parser_test_query.sql
main/metadata/queries/user/: AddUser.sql  CheckUser.sql  DeleteUser.sql  UserSchema.sql
main/metadata/src/: DbConnHandler.cpp  DbOperHandler.cpp  MetaData.cpp
main/server/: CMakeLists.txt
main/server/include/: ConnectionHandler.hpp  Logging.hpp  OperationException.hpp  OperationsHandler.hpp  RequestHandler.hpp  ResponseHandler.hpp  Routes.hpp  Server.hpp  ServerHandler.hpp
main/server/src/: ConnectionHandler.cpp  Logging.cpp  OperationsHandler.cpp  RequestHandler.cpp  ResponseHandler.cpp  Routes.cpp  Server.cpp  ServerHandler.cpp
main/storage/: CMakeLists.txt
main/storage/include/: AwsCrudOperHandler.hpp  AwsS3.hpp  AwsS3SetupHandler.hpp  StorageBase.hpp
main/storage/src/: AwsCrudOperHandler.cpp  AwsS3.cpp  AwsS3SetupHandler.cpp  StorageBase.cpp
main/user/: CMakeLists.txt
main/user/include/: User.hpp  UserOperations.hpp
main/user/src/: User.cpp  UserOperations.cpp
main/utils/: CMakeLists.txt
main/utils/include/: SimpleJsonParser.hpp
main/utils/include/http-requests/: Post.hpp  RequestParser.hpp
main/utils/include/json/: JsonParser.hpp  JsonParserBuilder.hpp  SimpleJsonParser.hpp
main/utils/include/query/: QueryParser.hpp  SimpleQueryParser.hpp
main/utils/src/: JsonParserBuilder.cpp  SimpleJsonParser.cpp
main/utils/src/http-requests/: Post.cpp
main/utils/src/json/: JsonParserBuilder.cpp  SimpleJsonParser.cpp
main/utils/src/query/: SimpleQueryParser.cpp
public/: nexus
public/static/css/: style.css
public/templates/: index.html
test/: CMakeLists.txt  NewServer.cpp  app.cpp  constants.h  constants.h.in  main.cpp
test/aws/: CMakeLists.txt  helloAWS.cpp
test/cppcms_test/: CMakeLists.txt
test/include/: ConnectionHandler.h
test/server/: CMakeLists.txt
test/server/include/: DataHandler.h  Server.h  ServerHandler.h  SourcesHandler.h
test/server/src/: DataHandler.cpp  Server.cpp  ServerHandler.cpp  SourcesHandler.cpp
test/sources/: app.js  config.json  index.html
test/wasm/: TestClass.h  TestClass2.cpp  TestClass2.h  TryingWasm.cpp  hello.html  hello.js  hello.wasm  wasm.js
test/web/: Encryption.cpp  ServerUsingBoost.cpp  app.js  index.html  run
(+7 files in other folders)
