cmake_minimum_required(VERSION 3.6)
project("storage")

set(SERVICE_COMPONENTS s3)
find_package(AWSSDK REQUIRED COMPONENTS ${SERVICE_COMPONENTS})

set(BUCKET_MAIN_AP_SOUTH_1 "MAIN_AP_SOUTH_1" PARENT_SCOPE)
set(BUCKET_MAIN_AP_SOUTHEAST_1 "MAIN_AP_SOUTHEAST_1" PARENT_SCOPE)
set(BUCKET_MAIN_US_EAST_1_BUCKET "MAIN_US_EAST_1_BUCKET" PARENT_SCOPE)
set(BUCKET_MAIN_US_EAST_2_BUCKET "MAIN_US_EAST_2_BUCKET" PARENT_SCOPE)
set(BUCKET_MAIN_EU_NORTH_1 "MAIN_EU_NORTH_1" PARENT_SCOPE)

set(BUCKET_BACKUP_EU_WEST_2 "BACKUP_EU_WEST_2" PARENT_SCOPE)

add_library(${PROJECT_NAME}
  "./src/AwsHandler.cpp"
)

target_include_directories(${PROJECT_NAME} PRIVATE "./include")
target_link_libraries(${PROJECT_NAME}
        ${AWSSDK_LINK_LIBRARIES})
